Remove some warnings for Java 21; improve javadoc; hide some non-public classes